# Edge-Detector-App

./: .cursorrule  .gitignore  README.md  debug.bat  debug.sh  git_setup_commands.txt  push_to_github.bat
app/: build.gradle.kts
app/src/androidTest/java/com/purnajear/edgedetectorapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/purnajear/edgedetectorapp/: DebugActivity.java  MainActivity.java
app/src/main/java/com/purnajear/edgedetectorapp/camera/: CameraHelper.java
app/src/main/java/com/purnajear/edgedetectorapp/gl/: OpenGLRenderer.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/edgedetection/: edge_detector.cpp
app/src/main/jni/opencv-check/: opencv_check.cpp
app/src/main/res/drawable/: ic_edge_detector.xml
app/src/main/res/layout/: activity_debug.xml  activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/purnajear/edgedetectorapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libs/OpenCV-android-sdk/: LICENSE
